app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-app
spec:
  replicas: 3  
  selector:
    matchLabels:
      app: bookstore
  template:
    metadata:
      labels:
        app: bookstore
    spec:
      containers:
      - name: bookstorecontainerb
        image: bookstorecontainerb.azurecr.io/flask-mongo-app:latest
        ports:
        - containerPort: 5005
