app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstore-app-service
spec:
  selector:
    app: bookstore
  ports:
    - protocol: TCP
      port: 40
      targetPort: 5005
  type: LoadBalancer
